# cantara-songlib

./: Cargo.toml  README.md  build.rs  cbindgen.toml  test.json
example_files/: Amazing Grace.cssf
src/: filetypes.rs  lib.rs  main.rs  slides.rs  song.rs  templating.rs
src/exporter/: lilypond.rs  mod.rs  slides.rs
src/importer/: classic_song.rs  cssf.rs  errors.rs  metadata.rs  mod.rs  song_yml.rs
testfiles/: Amazing Grace.song.yml  O What A Savior That He Died For Me.song  Sei nicht stolz auf das, was du bist.song.yml  What a friend we have in Jesus.song
