[package]
name = "cantara-songlib"
authors = ["Jan Martin Reckel jm.reckel@t-online.de"]
description = "Software for Song Presentation in Churches"
keywords = ["music", "sheets", "presentation"]
license = "GPL-3.0"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/CantaraProject/cantara-songlib"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = true

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive", "rc"] }
lazy_static = "1.5.0"
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
handlebars = "6.2.0"

[build-dependencies]
cbindgen = "0.26"
